# aufgabenbuch

./: .gitignore  .gitmodules  Datenstruktur.md  README.md  bun.lockb  devnotizen.md  package.json  svelte.config.js  vite.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/migrations/: 20240919152942_erstelle_aufgaben_tabelle.sql
src-tauri/queries/: aufgabe_aendern.sql  aufgabe_erledigen.sql  aufgabe_hinfuegen.sql  aufgabe_hinfuegen_mit_gruppe.sql  aufgabe_positionieren.sql  aufgabe_priorisieren.sql  aufgabe_wieder_aktivieren.sql  gruppen_list.sql  list_alle.sql  list_jetzige.sql  prioritaetenliste.sql
src-tauri/src/: aufgabe.rs  lib.rs  liste.rs  main.rs
src/aufgabe/: Aufgabe.svelte  Erledigen.svelte  Notiz.svelte  ResetAufgabe.svelte  radios.scss  store.js
src/file/: File.svelte
src/lib/: i18n.js
src/liste/: AufgabeBox.svelte  Buch.svelte  Eingangskorb.svelte  Gerade.svelte  Liste.svelte  Priorisieren.svelte  aufgabe.scss  liste.scss  store.js
src/routes/: +page.svelte  store.js
static/locales/de/: common.json
static/locales/en/: common.json
static/locales_backup/de/: common.json
static/locales_backup/en/: common.json
test/: test.ab
