[package]
name = "aufgabenbuch"
version = "0.6.2"
description = "To-Do Liste für ein gestalterisches Leben; für Sophisten."
authors = ["Isaak Engineer"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aufgabenbuch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tokio = { version="1.40.0", features= ["full"] }
sqlx = { version="0.8.2", features = ["sqlite", "runtime-tokio", "chrono", "macros"] }

futures = "0.3"
chrono = { version="0.4.38", features = ["serde"] }
tauri-plugin-cli = "2.2.0"
